<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="gi">Gallery Image</string>
    <string name="home">home</string>
    <string name="event">Event</string>
    <string name="tour">Tour</string>
    <string name="info">Information</string>
    <string name="gallery">Gallery image</string>

    <string name="test">test</string>

</resources>
